--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/smallriver0316/aws-cost-repoter/issues"
   },
-  "homepage": "https://github.com/smallriver0316/aws-cost-repoter#readme"
+  "homepage": "https://github.com/smallriver0316/aws-cost-repoter#readme",
+  "dependencies": {
+    "aws-sdk": "^2.922.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
+  }
 }
