Succeeded to get cost and usage

--- a/templates/iam.yml
+++ b/templates/iam.yml
@@ -27,6 +27,7 @@ Resources:
                   - ce:DescribeCostCategoryDefinition
                   - ce:ListCostCategoryDefinitions
                   - ce:GetCostCategories
+                  - ce:GetCostAndUsage
                 Resource: "*"
       Tags:
         -
