--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,11 @@
     "extends": [
         "standard"
     ],
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
+        "semi": [2, "always"]
     }
 }
