--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/smallriver0316/aws-cost-repoter#readme",
   "dependencies": {
-    "aws-sdk": "^2.922.0"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
+    "aws-sdk": "^2.922.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.28.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
