--- a/templates/sns.yml
+++ b/templates/sns.yml
@@ -5,7 +5,7 @@ Resources:
     Type: AWS::SNS::Topic
     Properties:
       DisplayName: "AwsCostRepoterSNS"
-      TopicName: "CostReporterSnsTopic"
+      TopicName: "CostReporterSnsTopic-${self:custom.stage}"
       Subscription:
         - Protocol: "email"
           Endpoint: ${self:custom.config.EMAIL}
