Modified to get cost and usage by services

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,6 +54,7 @@ provider:
 package:
  patterns:
    - '!README.md'
+   - '!LICENSE'
    - '!templates/**'
    - '!package.json'
    - '!package-lock.json'
