--- a/serverless.yml
+++ b/serverless.yml
@@ -18,15 +18,15 @@ app: aws-cost-reporter
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
-frameworkVersion: '2'
+frameworkVersion: "2"
 
 provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
 
-# you can overwrite defaults here
-# CAUTION: region must be us-east-1 in order to access CostExplorer
+  # you can overwrite defaults here
+  # CAUTION: region must be us-east-1 in order to access CostExplorer
   stage: dev
   region: us-east-1
 
@@ -52,13 +52,14 @@ provider:
 
 # you can add packaging information here
 package:
- patterns:
-   - '!README.md'
-   - '!LICENSE'
-   - '!templates/**'
-   - '!package.json'
-   - '!package-lock.json'
-   - '!serverless.yml'
+  patterns:
+    - "!README.md"
+    - "!LICENSE"
+    - "!templates/**"
+    - "!package.json"
+    - "!package-lock.json"
+    - "!serverless.yml"
+    - "!src/utils/**"
 
 plugins:
   - serverless-pseudo-parameters
@@ -71,7 +72,7 @@ functions:
   costReporter:
     handler: src/lambda/handler.costReporter
     role: CostReporterLambdaRole
-    description: 'function to read cost exploer and send SNS'
+    description: "function to read cost exploer and send SNS"
     timeout: 300
     environment:
       SNS_TOPIC_ARN: arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:CostReporterSnsTopic-${self:custom.stage}
