--- a/templates/iam.yml
+++ b/templates/iam.yml
@@ -17,7 +17,7 @@ Resources:
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       Policies:
-        - PolicyName: "CostReporterLambdaRole-${self:custom.stage}"
+        - PolicyName: "CostReporterLambdaPolicy-${self:custom.stage}"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -35,7 +35,5 @@ Resources:
                   - sns:publish
                 Resource: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:CostReporterSnsTopic-${self:custom.stage}"
       Tags:
-        -
-          Key: "AppName"
+        - Key: "AppName"
           Value: "ConstReporter"
-
