--- a/serverless.yml
+++ b/serverless.yml
@@ -61,9 +61,6 @@ package:
     - "!serverless.yml"
     - "!src/utils/**"
 
-plugins:
-  - serverless-pseudo-parameters
-
 custom:
   stage: ${opt:stage, self:provider.stage}
   config: ${file(./config/.config.${opt:stage, self:provider.stage}.yml)}
@@ -75,7 +72,7 @@ functions:
     description: "function to read cost exploer and send SNS"
     timeout: 300
     environment:
-      SNS_TOPIC_ARN: arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:CostReporterSnsTopic-${self:custom.stage}
+      SNS_TOPIC_ARN: arn:aws:sns:${aws:region}:${aws:accountId}:CostReporterSnsTopic-${self:custom.stage}
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
